# bp-coding

./: README.md  cli.py  pyproject.toml
agent/: __init__.py  agent.py  config.py  tools.py
tests/: test_agent.py  test_tools.py
