[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bp-coding-agent"
version = "0.1.0"
description = "AI coding agent that uses an LLM with tool-calling to write, read and run code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
bp-agent = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
